# f1-regulations-agent

./: .gitignore  README.md  build_index.py  main.py  pyproject.toml
src/: __init__.py  agent.py  models.py
